# chatgpt-cli-secure

./: LICENSE  README.md  check-update.sh  gpt-gui.sh  gpt-secure-setup.sh  gpt_cli.py  gpt_secure_setup.py  install.sh  pyproject.toml  uninstall.sh  update.py  update.sh  update_strategies.py
.github/workflows/: ci.yml
chatgpt_cli/: __init__.py  __main__.py  config.example  secure_storage.py
desktop/: chatgpt-gui.desktop
tests/: test_check_update_config.py  test_dependency_manager.py  test_env_config.py  test_executable_permissions.py  test_get_api_key_cache.py  test_install_config.py  test_read_config.py  test_response.py  test_secure_storage.py  test_stream_chat_completion.py  test_update_strategies.py  test_update_tmp.py  test_wrappers.py  util.py
utils/: dependency_manager.py  permissions.py
wrappers/: gpt  gpt-gui
